--- a/templates/applications/export.html
+++ b/templates/applications/export.html
@@ -36,7 +36,7 @@
                             <div id="json-task" class="col-sm-6 col-md-3">
                                 <a href="{{url_for('app.export_to', short_name=app.short_name, type='task', format='json')}}" rel="nofollow">
                                     <div class="well">
-                                        <i class="fa fa-file-code fa-4x"></i> 
+                                        <i class="fa fa-code fa-4x"></i> 
                                         <h3  class="margin-bottom-xs">{{_('Tasks (JSON)')}}</h3>
                                     </div>
                                 </a>
@@ -44,7 +44,7 @@
                             <div id="users-list" class="col-sm-6 col-md-3">
                                 <a href="{{url_for('app.export_to', short_name=app.short_name, type='task_run', format='json')}}" rel="nofollow">
                                     <div class="well">
-                                        <i class="fa fa-file-code-o fa-4x"></i> 
+                                        <i class="fa fa-code fa-4x"></i> 
                                         <h3  class="margin-bottom-xs">{{_('Answers (JSON)')}}</h3>
                                     </div>
                                 </a>
