--- a/templates/applications/tasks_browse.html
+++ b/templates/applications/tasks_browse.html
@@ -12,55 +12,46 @@
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
                 {{ helper.render_app_title(app, upload_method, subtitle=_('Browse tasks')) }}
-                <hr>
-                <p>{{_('This page shows all the available tasks for this project')}}.</p> 
-                <p>{{_('For each task, you can find the following information')}}:
-                  <ul>
-                      <li><strong>{{_('Task')}} </strong><span class="label label-info">#0000</span> {{_('This number identifies the task for the project and it is unique')}}</li>
-                      <li><strong>0 of 30</strong>: {{_('The first number shows how many answers have been submitted for the task and the')}} <a data-placement="top" rel="tooltip" href="#" data-original-title="{{_('This redundancy method will help to detect errors, typos, data forging, etc. when the task has been completed')}}">{{_('second number')}}</a> {{_('how many need to be obtained to mark the task as')}} <strong>{{_('completed')}}</strong>. </li>
-                      <li><strong>{{_('Progress Bar')}}</strong>: {{_('The progress bar will the percentage that has been completed for the task')}}.</li>
-                  </ul>
-                </p>
-                <hr>
                 {% for t in tasks %}
                 {% set task_pct = t.pct_status*100 %}
-                <div class="row">
+                <div class="row vcenter hcenter">
                         <div class="col-sm-3">
                             {% if task_pct >= 100 %}
                             {{_('Task')}} <span class="label label-success">#{{ t.id }}</span>
                             {% else %}
                             {{_('Task')}} <span class="label label-info">#{{ t.id }}</span>
                             {% endif %}
-                            {{ t.n_task_runs }} {{_('of')}} {{ t.n_answers }}
+                             {{ t.n_task_runs }} {{_('of')}} {{ t.n_answers }} answers
                         </div>
                         {% if task_pct >= 100 %}
-                        <div class="progress progress-success progress-striped col-md-5"> 
-                                <div class="bar" style="width:{{ task_pct }}%;"></div>
+                        <div class="progress progress-success progress-striped col-md-5 remove-margin-bottom remove-padding"> 
+                                <div class="progress-bar remove-padding" role="progressbar"  style="width:{{ task_pct }}%;"></div>
                         </div>
                         {% else %}
-                        <div class="progress progress-info progress-striped col-md-5"> 
-                                <div class="bar" style="width:{{ task_pct }}%;"></div>
+                        <div class="progress progress-info progress-striped col-md-5 remove-margin-bottom remove-padding"> 
+                                <div class="progress-bar remove-padding" role="progressbar" style="width:{{ task_pct }}%;"></div>
                         </div>
                         {% endif %}
                         <div class="col-sm-4">
                         {% if task_pct >= 100 %}
                             <a id="fulldownload" class="btn btn-success" href="{{ url_for('app.export', 
                                 short_name=app.short_name,
-                                task_id=t.id) }}"><i class="glyphicon glyphicon-cloud-download"></i> {{_('Download Task Results')}}</a>
+                                task_id=t.id) }}"><i class="fa fa-download"></i> {{_('Download Results')}}</a>
                         {% elif task_pct > 0 and task_pct < 100 %}
-                            <a id="partialdownload" class="btn btn-info" href="{{ url_for('app.export', 
+                            <a id="partialdownload" class="btn btn-primary" href="{{ url_for('app.export', 
                                 short_name=app.short_name,
-                                task_id=t.id) }}"><i class="glyphicon glyphicon-cloud-download"></i> {{_('Download Partial results')}}</a>
+                                task_id=t.id) }}"><i class="fa fa-download"></i> {{_('Download Partial results')}}</a>
 
                          {% else %}
-                            <a id="nothingtodownload" class="btn btn-info disabled" href="#"><i class="glyphicon glyphicon-cloud-download"></i> {{_('Nothing to download yet')}}</a>
+                            <a id="nothingtodownload" class="btn btn-default disabled" href="#"> {{_('Nothing to download yet')}}</a>
                          {% endif %}
                         </div>
                 </div>
                 {% endfor %}
-            </div><!-- col-sm-9 -->
-        </div>
                 {{ helper.render_pagination(pagination, _('Tasks')) }}
+            </div>
+        </div>
+               
 {% else %}
   <div class="page-header">
       <h1>{{_('Sorry! This project does not exist.')}}.</h1>
