--- a/templates/applications/task_n_answers.html
+++ b/templates/applications/task_n_answers.html
@@ -16,10 +16,10 @@
                                 <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('app.task_n_answers', short_name=app.short_name) }}">
                                     {{ form.hidden_tag() }}
                                     <fieldset>
-                                        {{ render_field(form.n_answers, class_="input-block-level", placeholder= _('The number of answers per tasks that you want for the project')) }}
-                                        <div class="form-actions">
-                                            <input type="submit" value={{_('Set redundancy')}} class="btn btn-danger" />
-                                            <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
+                                        {{ render_field(form.n_answers, class_="input-block-level form-control", placeholder= _('The number of answers required per task')) }}
+                                        <div class="pull-right" role="group">
+                                            <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
+                                            <input type="submit" value="Set redundancy" class="btn btn-danger" />
                                         </div>
                                     </fieldset>
                                 </form>
