--- a/templates/applications/task_scheduler.html
+++ b/templates/applications/task_scheduler.html
@@ -16,24 +16,18 @@
                 <p>{{_('You can choose from the following schedulers')}}:</p>
                 <ul>
                     <li><strong>{{_('Default')}}</strong> {{_('or')}}
-                    <strong>{{_('Depth First')}}</strong>: {{_('returns a task that
-                    has not been completed (the value of number of answers has
-                    not achieved) excluding the current user')}}.</li>
-                    <li><strong>{{_('Breadth First')}}</strong>: {{_('returns a
-                    task which has the least number of task runs (answers)
-                    excluding the current user')}}.</li>
-                    <li><strong>{{_('Random')}}</strong>: {{_('returns a task
-                    randomly --a user could get the same task twice or more
-                    times')}}.</li>
+                    <strong>{{_('Depth First')}}</strong>: returns the first task that has not been completed.</li>
+                    <li><strong>{{_('Breadth First')}}</strong>: returns a task with the least number of answers.</li>
+                    <li><strong>{{_('Random')}}</strong>: returns a random task - a user could get the same task more than once.</li>
                 </ul>
 
                 <form id="task_scheduler" class="form-horizontal" method="post" action="{{ url_for('app.task_scheduler', short_name=app.short_name) }}">
                     {{ form.hidden_tag() }}
                     <fieldset>
-                        {{ render_field(form.sched, class_="col-md-4", placeholder="Task scheduler for your app")}}
-                        <div class="form-actions">
-                            <input type="submit" value={{_('Set redundancy')}} class="btn btn-danger" />
-                            <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
+                        {{ render_field(form.sched, class_="form-control", placeholder="Task scheduler for your app")}}
+                        <div class="pull-right" role="group">
+                            <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn btn-default">{{_('Cancel')}}</a>
+                            <input type="submit" value="Set" class="btn btn-danger" />
                         </div>
                     </fieldset>
                 </form>
