--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -47,7 +47,7 @@
                 <ul>
                     <li>For more info, email: <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>
                     <li>Report any bugs, issues or improvements,
-                    <a href="https://github.com/alexandermendes/BL-pybossa-theme/issues">here</a> or <a href="https://github.com/alexandermendes/pybossa/issues">here</a>
+                    <a href="https://github.com/alexandermendes/BL-pybossa-theme/issues">here</a>
                     </li>            
                 </ul>
             </div>
