--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -20,100 +20,110 @@
     {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                 {{ privacy.render_lock_page() }}
             {% else %}
-            <div class="row padding-bottom-sm">
+            <div class="row padding-bottom-sm" id="loading-stats">
                 <div class="col-xs-12">
-                    <div class="white-rounded chart">
-                        <h3 class="text-center"><span class="check-plural" data-num="{{stats.n_total_users}}" data-noun="volunteer"></span> have participated in <span class="check-plural" data-num="{{stats.n_published_apps}}" data-noun="project"></span>, submitted <span class="check-plural" data-num="{{stats.n_task_runs}}" data-noun="answer"></span> and completed <span class="check-plural" data-num="{{stats.n_tasks_completed}}" data-noun="task"></span></h4>
+                    <div class="white-rounded text-center">
+                        <h3><span class="glyphicon glyphicon-refresh spinning"></span> Loading Statistics</h3>
                     </div>
                 </div>
             </div>
             
-            <div class="row padding-bottom-sm">
-                <div class="col-xs-12">
-                    <div class="white-rounded chart">
-                        <h4 class="text-center padding-bottom-sm">Answers Submitted and Tasks Completed per Day</h4>
-                        <div id="task-date-chart">
-                            <canvas id="task-date" style="max-height:300px;"></canvas>
+            <div id="all-stats" hidden>
+                <div class="row padding-bottom-sm">
+                    <div class="col-xs-12">
+                        <div class="white-rounded chart">
+                            <h3 class="text-center"><span class="check-plural" data-num="{{stats.n_total_users}}" data-noun="volunteer"></span> have participated in <span class="check-plural" data-num="{{stats.n_published_apps}}" data-noun="project"></span>, submitted <span class="check-plural" data-num="{{stats.n_task_runs}}" data-noun="answer"></span> and completed <span class="check-plural" data-num="{{stats.n_tasks_completed}}" data-noun="task"></span></h4>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row padding-bottom-sm">
+                    <div class="col-xs-12">
+                        <div class="white-rounded chart">
+                            <h4 class="text-center padding-bottom-sm">Answers Submitted and Tasks Completed per Day</h4>
+                            <div id="task-date-chart">
+                                <canvas id="task-date" style="max-height:300px;"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="col-sm-6 col-xs-12 padding-bottom-sm">
+                        <div class="white-rounded chart">
+                            <h4 class="text-center padding-bottom-sm">Top Volunteers This Week</h4>
+                            <div id="top-users-chart">
+                                <canvas id="top-users" width="500" height="500"></canvas>
+                                <div id="top-users-legend" class="padding-top-sm legend">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-xs-12 padding-bottom-sm">
+                        <div class="white-rounded chart">
+                            <h4 class="text-center padding-bottom-sm">Top Projects This Week</h4>
+                            <div id="top-projects-chart">
+                                <canvas id="top-projects" width="500" height="500"></canvas>
+                                <div id="top-projects-legend" class="padding-top-sm legend">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="col-sm-4 col-xs-12 padding-bottom-sm">
+                        <div class="white-rounded chart same-size">
+                            <h4 class="text-center padding-bottom-sm">Proportion of Authenticated Users</h4>
+                            <div id="user-chart">
+                                <canvas id="users" width="500" height="500"></canvas>
+                                <div id="users-legend" class="padding-top-sm legend">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-xs-12 padding-bottom-sm">
+                        <div class="white-rounded chart same-size">
+                            <h4 class="text-center padding-bottom-sm">Total Daily Activity</h4>
+                            <div id="dow-chart">
+                                <canvas id="dow" width="500" height="500"></canvas>
+                                <div id="dow-legend" class="padding-top-sm legend">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-xs-12 padding-bottom-sm">
+                        <div class="white-rounded chart same-size">
+                            <h4 class="text-center padding-bottom-sm">Status of Tasks</h4>
+                            <div id="task-status-chart">
+                                <canvas id="task-status" width="500" height="500"></canvas>
+                                <div id="task-status-legend" class="padding-top-sm legend">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row padding-bottom-sm">
+                    <div class="col-xs-12">
+                        <div class="white-rounded chart">
+                            <h4 class="text-center padding-bottom-sm">Active Volunteers per Day</h4>
+                            <div id="users-daily-chart">
+                                <canvas id="users-daily" style="max-height:300px;"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row padding-bottom-sm">
+                    <div class="col-xs-12">
+                        <div class="white-rounded text-center chart">
+                            <h4 class=" padding-bottom-sm">Locations of Anonymous Users</h4>
+                            <div id="map" style="height:480px;"></div>
                         </div>
                     </div>
                 </div>
             </div>
-            
-            <div class="row">
-                <div class="col-sm-6 col-xs-12 padding-bottom-sm">
-                    <div class="white-rounded chart">
-                        <h4 class="text-center padding-bottom-sm">Top Volunteers This Week</h4>
-                        <div id="top-users-chart">
-                            <canvas id="top-users" width="500" height="500"></canvas>
-                            <div id="top-users-legend" class="padding-top-sm legend">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-xs-12 padding-bottom-sm">
-                    <div class="white-rounded chart">
-                        <h4 class="text-center padding-bottom-sm">Top Projects This Week</h4>
-                        <div id="top-projects-chart">
-                            <canvas id="top-projects" width="500" height="500"></canvas>
-                            <div id="top-projects-legend" class="padding-top-sm legend">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="col-sm-4 col-xs-12 padding-bottom-sm">
-                    <div class="white-rounded chart same-size">
-                        <h4 class="text-center padding-bottom-sm">Proportion of Authenticated Users</h4>
-                        <div id="user-chart">
-                            <canvas id="users" width="500" height="500"></canvas>
-                            <div id="users-legend" class="padding-top-sm legend">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 col-xs-12 padding-bottom-sm">
-                    <div class="white-rounded chart same-size">
-                        <h4 class="text-center padding-bottom-sm">Total Daily Activity</h4>
-                        <div id="dow-chart">
-                            <canvas id="dow" width="500" height="500"></canvas>
-                            <div id="dow-legend" class="padding-top-sm legend">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 col-xs-12 padding-bottom-sm">
-                    <div class="white-rounded chart same-size">
-                        <h4 class="text-center padding-bottom-sm">Status of Tasks</h4>
-                        <div id="task-status-chart">
-                            <canvas id="task-status" width="500" height="500"></canvas>
-                            <div id="task-status-legend" class="padding-top-sm legend">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row padding-bottom-sm">
-                <div class="col-xs-12">
-                    <div class="white-rounded chart">
-                        <h4 class="text-center padding-bottom-sm">Active Volunteers per Day</h4>
-                        <div id="users-daily-chart">
-                            <canvas id="users-daily" style="max-height:300px;"></canvas>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row padding-bottom-sm">
-                <div class="col-xs-12">
-                    <div class="white-rounded text-center chart">
-                        <h4 class=" padding-bottom-sm">Locations of Anonymous Users</h4>
-                        <div id="map" style="height:480px;"></div>
-                    </div>
-                </div>
-            </div>  
             {% endif %}
 </div>
 <script src="{{url_for('static', filename='js/vendor/Chart.js-master/Chart.js')}}"></script>
@@ -123,6 +133,8 @@ Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOut
     <script>
     
 $(function(){
+    $('#loading-stats').slideUp();
+    $('#all-stats').slideDown();
     $('.check-plural').each(function() {
         var ret = $(this).attr('data-num') + ' ' + $(this).attr('data-noun');
         if (parseInt($(this).attr('data-num')) > 1) {
