--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery.cookie.js')}}"></script>
     <script src="{{url_for('static', filename='js/vkbeautify.js')}}" type="text/javascript"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="/static/js/vendor/jquery.serializejson.min.js" type="text/javascript"></script>
+    <script src="/static/vendor/jquery.serializejson.min.js" type="text/javascript"></script>
     
     <!-- Google Analytics or similar solutions -->
     {% include '_ga.html' ignore missing %}
