--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -32,7 +32,7 @@
              <strong>{{_('Joined')}}:</strong> {{account.created[0:10]}} 
              <br/>
              <strong>{{_('Answers')}}:</strong> {{account.task_runs}}
-             " rel="popover" data-original-title="<strong>{{account.fullname}}</strong>">
+             " rel="popover" data-original-title="<strong>{{account.name}}</strong>">
                   {{ helper.render_user_thumbnail(account, upload_method) }}
                 </a>
               </li>
