--- a/templates/applications/tasks_browse.html
+++ b/templates/applications/tasks_browse.html
@@ -48,7 +48,7 @@
                         </div>
                 </div>
                 {% endfor %}
-                {{ helper.render_pagination(pagination, _('Tasks')) }}
+                {{ helper.render_pagination(pagination, _('')) }}
             </div>
         </div>
                
