--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -61,7 +61,7 @@
              <strong>{{_('Joined')}}:</strong> {{user.created[0:10]}} 
              <br/>
              <strong>{{_('Answers')}}:</strong> {{user.task_runs}}
-             " rel="popover" data-original-title="<strong>{{user.fullname}}</strong>">
+             " rel="popover" data-original-title="<strong>{{user.name}}</strong>">
              <div class="shadow shadow-circle">
           {{ account_helper.render_user_thumbnail(user, upload_method, style="height:90px; width:90px;", class="img-circle") }}
              </div>
