--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-sm-9 col-sm-offset-3">
                     {% include "_flash_messages.html" %}
-                    <div class="col-xs-12 padding-bottom-sm">
+                    <div class="col-xs-12 padding-bottom-xs">
                         <h1 class="inset-text-grey"><strong>Admin Options</strong></h1>
                     </div>
                         <div id="projects" class="col-sm-6 col-md-4">
