--- a/templates/applications/tasks.html
+++ b/templates/applications/tasks.html
@@ -12,7 +12,10 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
+                <div class="col-xs-12 padding-bottom-xs">
                         <h1 class="inset-text-grey"><strong>Project Options</strong></h1>
+                    </div>
+                        
                         {% if app.owner_id == current_user.id or (current_user.is_authenticated() and current_user.admin)%}
                     
                             <div id="import_tasks" class="col-sm-6 col-md-4">
