--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -19,24 +19,24 @@
                     <table class="table table-striped table-hover table-condensed">
                         <thead class="inset-text-mid-grey">
                             <tr>
-                                <th>{{ _('Rank') }}</th>
+                                <th class="text-center">{{ _('Rank') }}</th>
                                 <th>{{ _('Name') }}</th>
-                                <th>{{ _('Answers') }}</th>
+                                <th class="text-center">{{ _('Answers') }}</th>
                             </tr>
                         </thead>
                         <tbody>
                         {% for user in top_users %}
-                        {% if user.fullname == current_user.fullname %}
+                        {% if user.fullname == current_user.fullname and user.rank > 0 %}
                             <tr class="success">
-                                <td><strong>{{user.rank}}</strong></td>
-                                <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.fullname}}</a></strong></td>
-                                <td><strong>{{user.score}}</strong></td>
+                                <td class="text-center"><strong>{{user.rank}}</strong></td>
+                                <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
+                                <td class="text-center"><strong>{{user.score}}</strong></td>
                             </tr> 
                         {% else %}
                             <tr>
-                                <td>{{user.rank}}</td>
-                                <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.fullname}}</a></strong></td>
-                                <td>{{user.score}}</td>
+                                <td class="text-center">{{user.rank}}</td>
+                                <td><strong><a href="{{url_for('account.profile', name=user.name)}}">{{user.name}}</a></strong></td>
+                                <td class="text-center">{{user.score}}</td>
                             </tr> 
                         {%endif%}
                         {% endfor %}
